Fix overflowing button in product editor nav (#1084)

--- a/app/src/marketplace/components/ProductPage/EditorNav/editorNav.pcss
+++ b/app/src/marketplace/components/ProductPage/EditorNav/editorNav.pcss
@@ -40,6 +40,9 @@
   text-align: right;
   white-space: nowrap;
   transition: color 0.3s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1rem;
 
   a,
   a:visited,
@@ -58,6 +61,9 @@
     outline: none;
     cursor: pointer;
     text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
   }
 }
 
